...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Manage Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HqX-N8-Rj6">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Manage Roster" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kiN-hm-XtZ">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="View Schedule" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P5Y-pA-Qjj">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
        <scene sceneID="X73-sy-ntN">
            <objects>
                <viewController title="Manage Team" id="h3q-ts-3Bn" customClass="ManageTeamViewController" customModule="Volley" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Z9S-Fr-ePf"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9y6-YZ-M9y">
                                <rect key="frame" x="20" y="20" width="95.5" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Adrienne" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zXS-14-pn4">
                                                    <rect key="frame" x="20" y="0.0" width="672" height="44"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZE-sU-Hq2">
                                <rect key="frame" x="309" y="71.5" width="85" height="30"/>
                                <state key="normal" title="Finish Game"/>
                                <connections>
                                    <action selector="finishGameButtonTapped:" destination="puu-Gn-gZf" eventType="touchUpInside" id="epw-gM-Bnv"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r2Q-dB-KKe">
                                <rect key="frame" x="144.5" y="128.5" width="125" height="30"/>
                                <state key="normal" title="Load More Games"/>
                                <connections>
                                    <action selector="loadMoreGamesButtonTapped:" destination="puu-Gn-gZf" eventType="touchUpInside" id="d0I-CD-o6k"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i2e-T7-8JN">
                                <rect key="frame" x="20" y="493" width="142" height="30"/>
                                <state key="normal" title="Find Games Nearby?"/>
                                <connections>
                                    <action selector="locationButtonTapped:" destination="puu-Gn-gZf" eventType="touchUpInside" id="BDj-hm-2Hx"/>
...
        <scene sceneID="TTl-T0-agS">
            <objects>
                <viewController title="Volleyball?" id="t79-FD-u2o" customClass="WebViewController" customModule="Volley" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="I2u-O3-t8h"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TBl-X2-hJx">
                                <rect key="frame" x="174.5" y="238" width="65" height="30"/>
                                <state key="normal" title="More Info"/>
                                <connections>
                                    <segue destination="t79-FD-u2o" kind="show" id="6We-PC-bmA"/>
...
